// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: DungeonsBase
message DungeonsBase
{	
	
	
	repeated TDungeonsDefine TDungeons = 1; // TDungeons

}

// Defined in table: TDungeons
message TDungeonsDefine
{	
	
	
	optional int32 Id = 1; // 副本ID
	
	
	optional uint32 Rewardid = 2; // 奖励ID
	
	
	optional int32 Type = 3; // 副本类型(1:新品,2:热销)
	
	
	optional int32 Mark = 4; // 推荐标记
	
	
	optional int32 FreeMark = 5; // 2钻石1免费0普通
	
	
	optional int32 Getnum = 6; // 中奖次数
	
	
	optional int32 Rewardnum = 7; // 奖励数量
	
	
	optional int32 Costid = 8; // 花费ID
	
	
	optional int32 Costnum = 9; // 花费数量
	
	
	optional int32 Size = 10; // 方块区域大小
	
	
	optional int32 Turntableid = 11; // 所用转盘id
	
	
	repeated string Scorenum = 12; // 小元宝数量
	
	
	repeated string Item = 13; // 道具
	
	
	repeated string Adv = 14; // 广告
	
	
	optional int32 Scorelimit = 15; // 大奖全局限制
	
	
	optional int32 PersonlLimit = 16; // 大奖个人限制
	
	
	repeated string MiddleYuanbao = 17; // 中等元宝数量
	
	
	repeated string BigYuanbao = 18; // 大额元宝数量
	
	
	repeated string YuanbaoLimit = 19; // 元宝档位-数量-限制
	
	
	repeated string DiamondChip = 20; // 钻石碎片

}

